src/test/ui/match/issue-91058.stderr
error[E0308]: mismatched types
  --> $DIR/issue-91058.rs:7:10
   |
LL |     match array {
   |           ----- this expression has type `[S; 1]`
LL |         [()] => {}
   |          ^^ expected struct `S`, found `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
